[package]
name = "scriptkeys"
version = "0.2.3"
edition = "2021"
description = "ScriptKeys allows you to easily build macros (in Lua) on every key press for the supported devices."
documentation = "https://github.com/bigmstone/scriptkeys/blob/main/README.md"
homepage = "https://mattstone.io/projects/scriptkeys/"
repository = "https://github.com/bigmstone/scriptkeys.git"
license-file = "LICENSE"
keywords = ["scripting", "keyboard", "macros"]
categories = ["command-line-utilities"]

[dependencies]
hidapi = "2.3"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify = "6.0"
enigo = "0.1"
anyhow = "1.0"
mlua = { version = "0.8", features = ["lua54", "vendored", "send"] }
directories = "5.0"
log4rs = "1.2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", features = [ "relax-void-encoding" ] }
objc2-foundation = { version = "0.2", features = [ "NSGeometry" ] }
objc2-app-kit = { version = "0.2", features = [ "NSEvent", "NSGraphicsContext" ] }
